<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/headerlogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/left_margin_adviceheader"
        android:background="@color/lightblue" >

        <ImageView
            android:id="@+id/shutdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/left_margin"
            android:src="@drawable/days" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!--
        Button
            android:id="@+id/durationtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/left_margin"
            android:background="@android:color/transparent"
            android:text="@string/forgetpasswd" >
        </Button
        -->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerlogin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/user"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwds_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/passwd"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/underlogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/left_margin_adviceheader"
        android:layout_below="@id/login_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/forgetp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/forgetpasswd"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/left_margin"
            android:text="@string/notregister"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <SlidingDrawer
        android:id="@+id/myslide"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:content="@+id/content_slide"
        android:handle="@+id/handle_silde"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@id/handle_silde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/account_oauth_login_sliding_drawer_header" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/third_login" />
        </RelativeLayout>

        <LinearLayout
            android:id="@id/content_slide"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_holo_light"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/account_ic_oauth_qq" />

            <ImageButton
                android:id="@+id/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/account_ic_oauth_sina" />
        </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>